(env
    (dev (flags (:standard -open Ocaml_nanogui_libext)))
    (debug (flags (:standard -open Ocaml_nanogui_libext)))
    (release (flags (:standard -open Ocaml_nanogui_libext)))
    )

(library 
 (public_name ocaml_nanogui)
 (libraries 
    containers
    ocaml_nanogui_libext
    ppx_blob
    rope
    tgls.tgles2
    tgls.tgles3
    glfw-ocaml
    graphv_gles3
   ; nanovg
 )
 (inline_tests)
 (preprocess
  (pps ppx_jane -allow-unannotated-ignores ppx_expect ppx_blob ppx_optcomp)))

