(env
    (dev (flags (:standard -open Ocaml_nanogui_libext)))
    (debug (flags (:standard -open Ocaml_nanogui_libext)))
    (release (flags (:standard -open Ocaml_nanogui_libext)))
    )

(library 
 (public_name ocaml_nanogui)
 (libraries 
    ocaml_nanogui_libext
    containers
    rope
 )
 (virtual_modules backend)
 (inline_tests)
 (preprocess
  (pps ppx_jane -allow-unannotated-ignores ppx_expect ppx_blob ppx_optcomp)))

